<resources>
    <string name="app_name">Flock</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_join">JOIN</string>
    <string name="action_signup">SIGN UP</string>
    <string name="action_signin">SIGN IN</string>
    <string name="action_forgot_password">FORGOT</string>
    <string name="action_cancel">X</string>
    <string name="action_done">DONE</string>
    <string name="action_submit">SUBMIT</string>
    <string name="action_reset_password">RESET PASSWORD</string>
    <string name="fmt_date_format">MM/dd/yyyy hh:mm a</string>
    <string name="fmt_email_domain">\@utdallas.edu</string>
    <string name="error_invalid_email">valid email required</string>
    <string name="error_invalid_domain">valid school email required</string>
    <string name="error_field_required">field required</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_signin_failed">login failed</string>
    <string name="error_signup_account_exists">you are already in flock</string>
    <string name="error_signup_failed">could not sign you up at this time</string>
    <string name="error_password_reset_no_account">could not find you in flock</string>
    <string name="error_password_reset_failed">could not reset your password at this time</string>
    <string name="error_password_change_match">passwords do not match</string>
    <string name="error_password_change_wrong">wrong current password</string>
    <string name="error_password_change_failed">could not change your password at this time</string>
    <string name="error_something_wrong">something went wrong, please report to admin</string>
    <string name="icon_fa_cancel">{fa-remove}</string>
    <string name="icon_fa_going">{fa-check}</string>
    <string name="icon_fa_not_going">{fa-remove}</string>
    <string name="icon_fa_join">{fa-user-plus}</string>
    <string name="icon_fa_leave">{fa-user-times}</string>
    <string name="icon_fa_circle_solid">{fa-circle}</string>
    <string name="icon_fa_circle_hollow">{fa-circle-o}</string>
    <string name="icon_fa_pending">{fa-hourglass-half}</string>
    <string name="image_description">Image</string>
    <string name="msg_password_sent">check email for temporary password and sign in</string>
    <string name="msg_password_changed">password changed successfully</string>
    <string name="msg_loading_data">loading data, please standby…</string>
    <string name="msg_no_event">no upcoming event</string>
    <string name="msg_no_group">no group found</string>
    <string name="msg_join_request_sent">your join request has been sent for approval</string>
    <string name="msg_processing_request">processing your request…</string>
    <string name="msg_processing_failed">sorry, could not process your request, please try again later</string>
    <string name="msg_google_play_unavailable">google play service unavailable, please activate it to use this feature</string>
    <string name="prompt_search">start typing…</string>
    <string name="prompt_firstname">first name</string>
    <string name="prompt_lastname">last name</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">password</string>
    <string name="prompt_new_password">new password</string>
    <string name="prompt_re_password">re-enter new password</string>
    <string name="title_signup">SIGN UP</string>
    <string name="title_signin">SIGN IN</string>
    <string name="title_reset_password">RESET PASSWORD</string>
    <string name="title_change_password">CHANGE PASSWORD</string>
    <string name="title_search">Search</string>
    <string name="title_events_groups">EVENTS AND GROUPS</string>
    <string name="title_events">EVENTS</string>
    <string name="title_groups">GROUPS</string>
    <string name="title_my_events">MY EVENTS</string>
    <string name="title_my_groups">MY GROUPS</string>
    <string name="title_nearby_events">NEARBY EVENTS</string>
    <string name="title_rsvp">RSVP</string>
    <string name="title_membership">MEMBERSHIP</string>
    <string name="title_back">Back</string>
    <string name="value_o">o</string>
</resources>
