<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/passwordResetForm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorContentBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.viiup.android.flock.application.PasswordResetActivity">

    <TextView
        android:id="@+id/textViewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/action_cancel"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_link_color" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/emailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonReset"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorButton"
        android:text="@string/action_reset_password"
        android:textColor="@color/colorBarText"
        android:textStyle="bold" />

</LinearLayout>
